# Tengu-Marauder

./: CMakeLists.txt  LICENSE  README.md  platformio.ini  requirements.txt
Addons/: speak.py
Guides/: Workshop.md
include/: Camera.h  LoRaWAN.h  MarauderFunctions.h  MotorControl.h
launch/: leftmotortest.py  motorcontrol.py  motorcontrolv2.py  motortest.py  singlemotortest.py  tengu_marauder_launch.py
postmortem/: writeup.md
src/: Camera.cpp  LoRaWAN.cpp  MarauderFunctions.cpp  MotorControl.cpp  main.cpp
src/command_node/: command_node.py  package.xml
src/data_processing_node/: data_processing_node.py  package.xml  setup.py
src/esp32_comm/: esp32_comm_node.py  package.xml  setup.py
src/motor_control/: _init_.py  package.xml  setup.py
src/operator_interface/: operator_interface.py  package.xml  setup.py
src/xbee_comm/: setup.py  xbee_comm_node.py
